--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
+                android:id="@+id/nav_navigation"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/menu_dashboard"/>
+
+        <item
                 android:id="@+id/nav_home"
                 android:icon="@drawable/ic_menu_camera"
                 android:title="@string/menu_home"/>
