--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -25,7 +25,6 @@
                     android:orientation="vertical">
 
                 <RelativeLayout
-                        android:id="@id/container"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1.0">
@@ -97,7 +96,7 @@
                                     android:layout_weight="10"
                                     android:gravity="center"
                                     android:paddingLeft="10dp"
-                                    android:text="Registered voters vs Voted"
+                                    android:text="Registered voters vs voted"
                                     android:textColor="@android:color/background_dark"
                                     android:textColorLink="@android:color/white"
                                     android:textSize="15dp"
@@ -105,39 +104,13 @@
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
-
-                            <LinearLayout
+                            <com.github.mikephil.charting.charts.PieChart
+                                    android:id="@+id/piechart"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center"
-                                    android:orientation="vertical"
-                                    android:paddingBottom="10dp"
-                                    android:weightSum="10"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent">
-
-
-                                <TextView
-                                        android:id="@+id/txtUserTokenAmount"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="250dp"
-                                        android:layout_marginTop="0dp"
-                                        android:layout_weight="10"
-                                        android:gravity="center"
-                                        android:paddingLeft="10dp"
-                                        android:text="$0"
-                                        android:textColor="@android:color/background_dark"
-                                        android:textColorLink="@android:color/white"
-                                        android:textSize="45dp"
-                                        android:textStyle="bold"
-                                        android:visibility="visible"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                            </LinearLayout>
+                                    android:layout_height="200dp"
+                                    android:layout_margin="2dp"
+                                    android:textColor="@android:color/background_dark"
+                            />
 
                         </LinearLayout>
 
@@ -172,15 +145,15 @@
 
                             <RelativeLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="400dp">
+                                    android:layout_height="300dp">
 
                                 <HorizontalScrollView
                                         android:layout_width="fill_parent"
-                                        android:layout_height="400sp"
+                                        android:layout_height="fill_parent"
                                         android:fillViewport="true">
 
                                     <com.github.mikephil.charting.charts.BarChart
-                                            android:id="@+id/chart1"
+                                            android:id="@+id/barchart"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_above="@+id/seekBar1"/>
