fix : vote ui components
-creation of the vote layout components : tree view

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/card_look</item>
     </style>
+
+    <style name="TreeNodeStyleCustom">
+        <item name="android:paddingLeft">20dp</item>
+    </style>
 </resources>
