--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,19 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/mobile_navigation"
-            app:startDestination="@+id/nav_dashboard">
+            app:startDestination="@+id/nav_candidate_selection">
 
     <fragment
             android:id="@+id/nav_dashboard"
             android:name="com.ttti.voting.ui.fragments.DashboardFragment"
             android:label="@string/menu_dashboard"
             tools:layout="@layout/fragment_dashboard"/>
+
+    <fragment
+            android:id="@+id/nav_candidate_selection"
+            android:name="com.ttti.voting.ui.fragments.CandidateSelection"
+            android:label="@string/menu_candidate_selection"
+            tools:layout="@layout/fragment_candidate_selection"/>
 
 
     <fragment
