--- a/app/src/main/res/layout/fragment_candidate_selection.xml
+++ b/app/src/main/res/layout/fragment_candidate_selection.xml
@@ -1,9 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-    <RelativeLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/mainLayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/voting_back2"
+              android:orientation="vertical"
+              android:paddingLeft="18dp"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingRight="18dp"
+              android:paddingBottom="@dimen/activity_vertical_margin">
+
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/container"></RelativeLayout>
-</RelativeLayout>
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="top"
+                android:orientation="vertical">
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/treeviewcontainer">
+            </RelativeLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+            >
+                <Button
+                        android:id="@+id/btnCast"
+                        style="@style/Base.TextAppearance.AppCompat.Body1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:background="@color/black"
+                        android:clickable="true"
+                        android:text="Click to cast your vote"
+                        android:textAllCaps="false"
+                        android:textColor="#FFFF"
+                        android:textSize="28sp"
+                        android:textStyle="normal"
+                        app:backgroundTintMode="src_in" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
+</LinearLayout>
