feat : link candidate and vote screens
-addition of candidate registration and voting screens on the mobile app

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,7 @@
                     android:background="@android:color/transparent"
                     android:drawablePadding="12dp"
                     android:ems="10"
-                    android:hint="First Name"
+                    android:hint="First name"
                     android:inputType="text"
                     android:maxLines="1"
                     android:padding="8dp"
@@ -62,7 +62,7 @@
                     android:background="@android:color/transparent"
                     android:drawablePadding="12dp"
                     android:ems="10"
-                    android:hint="Full name"
+                    android:hint="Last name"
                     android:inputType="text"
                     android:maxLines="1"
                     android:padding="8dp"
@@ -181,7 +181,7 @@
                     android:background="@android:color/transparent"
                     android:drawablePadding="12dp"
                     android:ems="10"
-                    android:hint="Confirm Password"
+                    android:hint="Confirm password"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:paddingLeft="8dp"
