--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,20 @@
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_navigation"
-                android:icon="@drawable/ic_menu_slideshow"
+                android:icon="@drawable/vote3"
                 android:title="@string/menu_dashboard"/>
 
         <item
-                android:id="@+id/nav_home"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="@string/menu_home"/>
+                android:id="@+id/nav_vote"
+                android:icon="@drawable/vote4"
+                android:title="@string/menu_vote"/>
         <item
-                android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/menu_gallery"/>
-        <item
+                android:id="@+id/nav_candidate"
+                android:icon="@drawable/candidate_icon"
+                android:title="@string/menu_candidate"/>
+        <!--<item
                 android:id="@+id/nav_slideshow"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_slideshow"/>
+                android:title="@string/menu_slideshow"/>-->
     </group>
 </menu>
