--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,8 +16,9 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Theme.Voting.PopupOverlay"/>
+                android:background="@drawable/background3"
+                app:popupTheme="@style/Theme.Voting.PopupOverlay"
+        />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -30,6 +31,6 @@
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@android:drawable/ic_dialog_email"/>
+            app:srcCompat="@drawable/btn_choice"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
