--- a/app/src/main/res/layout/layout_candidate_node.xml
+++ b/app/src/main/res/layout/layout_candidate_node.xml
@@ -5,14 +5,10 @@
     android:minHeight="48dp"
     android:background="?android:attr/selectableItemBackground"
     android:layout_height="match_parent">
-
-
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-
         <LinearLayout
                 android:id="@+id/node_valueContainer"
                 android:layout_centerVertical="true"
@@ -22,18 +18,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <com.github.johnkil.print.PrintView
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/arrow_icon"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:iconText="@string/ic_keyboard_arrow_right"
-                    app:iconColor="#12558C"
-                    app:iconFont="material-icon-font.ttf"
-                    app:iconSize="20dp"/>
-
             <com.github.johnkil.print.PrintView
                     android:layout_alignWithParentIfMissing="true"
                     android:id="@+id/icon"
@@ -55,7 +39,17 @@
                     android:id="@+id/node_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
+            <TextView
+                    android:layout_weight="100"
+                    android:layout_centerVertical="true"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/icon"
+                    android:layout_toLeftOf="@+id/buttonsContainer"
+                    android:id="@+id/node_tag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
             <CheckBox
                     android:id="@+id/voteCheckBox"
                     android:layout_width="30dp"
@@ -63,34 +57,9 @@
                     android:layout_margin="0dp"
                     android:padding="0dp"
                     android:layout_gravity="right"
-                    android:text="" android:layout_weight="10"/>
-
-
+                    android:text="" android:layout_weight="1"/>
         </LinearLayout>
-
-        <!--<LinearLayout
-                style="@style/relative_CardLook"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/lbl_candidate_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:paddingLeft="10dp"
-                    android:text="Candidate List"
-                    android:textColor="@android:color/background_dark"
-                    android:textColorLink="@android:color/white"
-                    android:textSize="15dp"
-                    android:visibility="visible"
-            />
-        </LinearLayout>-->
     </LinearLayout>
-
-
-
-
     <LinearLayout
             android:id="@+id/buttonsContainer"
             android:layout_centerVertical="true"
@@ -99,34 +68,5 @@
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:orientation="horizontal">
-
-
-
-
-
-       <!-- <com.github.johnkil.print.PrintView
-            android:id="@+id/btn_addFolder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            app:iconSize="20dp"
-            app:iconColor="#99cc00"
-            app:iconFont="material-icon-font.ttf"
-            app:iconText="@string/ic_add" />
-
-
-        <com.github.johnkil.print.PrintView
-            android:padding="5dp"
-            android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:iconSize="20dp"
-            app:iconColor="#ff4444"
-            app:iconFont="material-icon-font.ttf"
-            app:iconText="@string/ic_close" />-->
     </LinearLayout>
-
-
-
-
 </RelativeLayout>
